docs(core): verify throughput with the requested mixed workload